--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
     <!-- About Me -->
     <section id="about-me" class="container">
       <div>
-        <img src="work-8660318_1280.png" class="profile_image"/>
-        <!-- <img src="https://miro.medium.com/max/1400/1*qdAW1TjCN57h1lbuuzvchg.gif" class="profile_image"/> -->
+        <!-- <img src="work-8660318_1280.png" class="profile_image"/> -->
+        <img src="https://miro.medium.com/max/1400/1*qdAW1TjCN57h1lbuuzvchg.gif" class="profile_image"/>
       </div>
 
       <div>
